test_programs/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_function_on_pub_struct_returns_private/src/main.nr

    pub mod moo {
        struct Bar {}
        pub struct Foo {}

        impl Foo { 
            pub fn bar() -> Bar { 
                Bar {}
            }
        }

        pub fn no_unused_warnings() {
            let _ = Foo {};            
        }
    }
    fn main() {}
    